Closed Bug 1362182 Opened 7 years ago Closed 7 years ago

Intermittent test_trackingprotection_bug1157081.html,test_reporturl.html,test_bug1254766.html,test_classifier.html | application crashed [@ nsUrlClassifierDBServiceWorker::NotifyUpdateObserver(nsresult)]

Categories

(Toolkit :: Safe Browsing, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- unaffected
firefox55 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: hchang)

References

Details

(Keywords: crash, intermittent-failure)

Crash Data

Attachments

(1 file)

Priority: -- → P5
Assignee: nobody → hchang
Status: NEW → ASSIGNED
Priority: P5 → P3
This only happens once for the past one month, set it to P5
Priority: P3 → P5
This is happening more often than that. See dupes.
Flags: needinfo?(hchang)
Summary: Intermittent test_trackingprotection_bug1157081.html | application crashed [@ nsUrlClassifierDBServiceWorker::NotifyUpdateObserver(nsresult)] → Intermittent test_trackingprotection_bug1157081.html,test_reporturl.html,test_bug1254766.html,test_classifier.html | application crashed [@ nsUrlClassifierDBServiceWorker::NotifyUpdateObserver(nsresult)]
Priority: P5 → P2
Let's investigate in case it's related to the recent changes to the update thread.
Attachment #8874784 - Flags: review?(francois)
Comment on attachment 8874784 [details]
Bug 1362182 - Early return if mUpdateObserver has been nulled out by CancelUpdate().

https://reviewboard.mozilla.org/r/146164/#review150982
Attachment #8874784 - Flags: review?(francois) → review+
Pushed by hchang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3e11df0da1c8
Early return if mUpdateObserver has been nulled out by CancelUpdate(). r=francois
https://hg.mozilla.org/mozilla-central/rev/3e11df0da1c8
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Flags: needinfo?(hchang)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: