Bug 1362182 - Early return if mUpdateObserver has been nulled out by CancelUpdate(). r=francois

MozReview-Commit-ID: 2fQCtjMJkx

--HG--
extra : rebase_source : 33b16d2c1958d8a4dcd4cfa9eb3b602f2c84aa55